update logo and decorate noscript page

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,27 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
     <title>Taska</title>
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app</noscript>
+    <noscript>
+      <div id="noscript">
+        <img alt="Sad cat" src="%PUBLIC_URL%/sad-cat.svg" />
+        <h1>
+          You need to
+          <a
+            href="https://support.google.com/adsense/answer/12654"
+            rel="noopener noreferrer"
+            target="_blank"
+            >enable JavaScript</a
+          >
+          to run this app
+        </h1>
+      </div>
+    </noscript>
+
     <div id="root"></div>
   </body>
 </html>
